--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "echarts": "^4.2.1",
+    "echarts-for-react": "^2.0.15-beta.0",
     "react": "^16.8.6",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
